# ubiquitous-computing-machine

./: CMakeLists.txt  run.cpp  simBio
lib/: rapidxml_utils.hpp
src/bio/matsuoka_et_al_2004/exp/: anoxia.cpp  anoxia.h
src/core/: analyzer.h  analyzer_list.cpp  analyzer_list.h  calculation_observer.h  component.cpp  component.h  composite.h  conductor.h  i_reset_before_calc.h  initializer.cpp  initializer.h  link.h  node.h  node_list.h  parameter.cpp  parameter.h  reactor.h  reactor_list.h  variable.h  variable_list.h  visitor.h
src/core/integrator/: concentration.h  euler.h  euler_list.h  positive.h  positive_rk.h  probability.h  runge_kutta.h  runge_kutta_list.h
xml/: cell.xml  current_clamp.xml
